# SheffTelepresence

./: README.md
telepresence_audio/human_side/: CMakeLists.txt
telepresence_audio/human_side/scripts/: telepresenceHuman.xml
telepresence_audio/human_side/src/: main.cpp
telepresence_audio/robot_side/: CMakeLists.txt
telepresence_audio/robot_side/scripts/: telepresenceRobot.xml
telepresence_audio/robot_side/src/: main.cpp
telepresence_audio/scripts/: telepresence.xml  telepresenceAudio.xml
telepresence_neck/: CMakeLists.txt
telepresence_neck/conf/: NeckModule.ini  config.ini
telepresence_neck/scripts/: telepresenceNeck.xml
telepresence_neck/src/: main.cpp
telepresence_neck_gateway/: CMakeLists.txt
telepresence_neck_gateway/scripts/: telepresenceNeck_gtw.xml  telepresenceNeck_local.xml
telepresence_neck_gateway/src/: main.cpp
telepresence_tactile/: CMakeLists.txt
telepresence_tactile/arduino_tactile_library/: CMakeLists.txt
telepresence_tactile/arduino_tactile_library/include/: txzy.h
telepresence_tactile/arduino_tactile_library/src/: txzy.cpp
telepresence_tactile/conf/: TactileModule.ini
telepresence_tactile/driver_vibration_v_0_1/: driver_vibration_v_0_1.ino
telepresence_tactile/scripts/: telepresenceTactile.xml  telepresenceTactile_gtw.xml  telepresenceTactile_local.xml
telepresence_tactile/src/: main.cpp
telepresence_tactile_gateway/: CMakeLists.txt
telepresence_tactile_gateway/conf/: TactileModule_Gateway.ini
telepresence_tactile_gateway/scripts/: telepresenceTactile_gtw.xml
telepresence_tactile_gateway/src/: main.cpp
telepresence_vision/: CMakeLists.txt
telepresence_vision/conf/: VisionModule.ini
telepresence_vision/scripts/: telepresenceVision.xml  telepresenceVision_gtw.xml  telepresenceVision_local.xml
telepresence_vision/src/: main.cpp
telepresence_vision_gateway/: CMakeLists.txt
telepresence_vision_gateway/conf/: VisionModule_Gateway.ini  config.ini
telepresence_vision_gateway/scripts/: telepresenceVision_gtw.xml
telepresence_vision_gateway/src/: main.cpp
